--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -101,6 +101,18 @@
 
     <!-- Strings related to Settings -->
 
+    <string name="pref_temperature_units_label">واحد دما</string>
+    <string name="pref_temperature_units_key">temperature_units</string>
+    <string name="pref_temperature_units_default">Metric</string>
+    <string-array name="pref_temperature_unit_titles">
+        <item>Metric</item>
+        <item>Imperial</item>
+    </string-array>
+    <string-array name="pref_temperature_unit_values">
+        <item>سانتی گراد</item>
+        <item>فارنهایت</item>
+    </string-array>
+
     <!-- Example General settings -->
     <string name="pref_header_general">General</string>
 
