--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -171,7 +171,7 @@
     <string name="pref_title_vibrate">Vibrate</string>
     <string name="pref_location_label">موقعیت</string>
     <string name="pref_location_key" translatable="false">location</string>
-    <string name="prf_location_default" translatable="false">112931</string>
+    <string name="pref_location_default" translatable="false">112931</string>
     <string name="action_share">اشتراک گذاری</string>
     <string name="action_map">نقشه</string>
 </resources>
